--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   Sumy State University
- Author:       Oleh Kopytsia
- Version:      1.0.0
+ Theme Name:    Сумський Державний Університет (Sumy State University)
+ Author:        Олег Копиця (Oleh Kopytsia)
+ Version:       1.0.0
 */
