--- a/style.css
+++ b/style.css
@@ -3,3 +3,25 @@
  Author:        Олег Копиця (Oleh Kopytsia)
  Version:       1.0.0
 */
+
+.header-menu ul {
+  list-style: none;
+  background: #D4E7EE;
+  overflow: hidden;
+}
+.header-menu li {
+  float: left;
+}
+.header-menu a {
+  transition: .5s linear;
+  display: block;
+  padding: 1em;
+  border-right: 1px solid #ADC0CE;
+  border-left: 1px solid #ADC0CE;
+  background: rgba(173, 192, 206, .3);
+  color: #29838C;
+}
+.header-menu a:hover {
+  background: #ADC0CE;
+  text-decoration: none;
+}
