--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
  Version:       1.0.0
 */
 
+/*header menu*/
 .header-menu ul {
   list-style: none;
   background: #D4E7EE;
@@ -25,3 +26,4 @@
   background: #ADC0CE;
   text-decoration: none;
 }
+/*header menu*/
