--- a/style.css
+++ b/style.css
@@ -139,6 +139,13 @@ h1{
 .cont_content_index{
   font-size: 14pt;
 }
+.more{
+  color: green;
+}
+.more:hover{
+  text-decoration: none;
+  color: yellow;
+}
 /*index*/
 
 /*footer*/
