--- a/style.css
+++ b/style.css
@@ -133,8 +133,8 @@ h1{
 .one_content:last-child{
   margin: 0;
 }
-.title_index{
-
+.title_index a{
+  display: inline-block;
 }
 .cont_content_index{
   font-size: 14pt;
@@ -150,7 +150,7 @@ h1{
 
 /*comment*/
 .comment_g{
-  margin: 15px 0 0 0;
+
 }
 .comment_g li{
   list-style-type: none;
@@ -178,6 +178,13 @@ h1{
 .comment_text p{
   margin: 10px;
 }
+.com_data{
+  display: inline-block;
+}
+.edit_p_reply_p{
+  display: inline-flex;
+  float: right;
+}
 .comment_g .edit_p{
   padding: 2px;
   border: 1px solid #ADC0CE;
@@ -197,7 +204,19 @@ h1{
   transition: .5s linear;
   text-decoration: none;
 }
+.comment_g .children{
+  margin: 0 0 0 25px;
+}
+.comment_g .comment-body{
+  margin: 20px 0 0 0;
+}
 /*comment*/
+
+/*comment form*/
+.comment_form_text{
+  max-width: 875px;
+}
+/*comment form*/
 
 /*footer*/
 #footer{
