--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h1{
 /*header footer*/
 
 /*sidebar*/
-#sidebar{
+#sidebar_sumdu{
   padding: 10px;
   float: left;
   border-radius: 10px;
@@ -112,8 +112,26 @@ h1{
 }
 /*sidebar*/
 
+/*search form*/
+#sidebar_sumdu .search_text{
+  width: 202px;
+  padding: 1px 0 1px 5px;
+  border-radius: 2px;
+  background: azure;
+}
+#sidebar_sumdu #searchsubmit{
+  padding: 0 5px;
+  border: 2px solid #ADC0CE;
+  transition: .5s linear;
+  font-size: 12pt;
+}
+#sidebar_sumdu #searchsubmit:hover{
+  background: #ADC0CE;
+}
+/*search form*/
+
 /*all template*/
-#content{
+#content_sumdu{
   padding: 10px;
   float: left;
   border-radius: 10px;
@@ -130,9 +148,6 @@ h1{
   margin: 0 0 5px 0;
   background: rgba(173, 192, 206, .3);
 }
-.one_content:last-child{
-  margin: 0;
-}
 .title_index a{
   display: inline-block;
 }
@@ -147,6 +162,69 @@ h1{
   color: yellow;
 }
 /*index*/
+
+/*pagination*/
+#content_sumdu .navigation.pagination{
+  margin: 0;
+}
+#content_sumdu .navigation.pagination h2{
+  display: none;
+}
+#content_sumdu .navigation.pagination .nav-links .arrow{
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+}
+#content_sumdu .navigation.pagination .nav-links a{
+  text-decoration: none;
+}
+#content_sumdu .navigation.pagination .nav-links .arrow img{
+  height: 100%;
+  width: 100%;
+  margin: 0 0 4px 0;
+}
+#content_sumdu .navigation.pagination .nav-links .page-numbers:hover{
+  background: rgb(144,238,144);
+  cursor: pointer;
+}
+#content_sumdu .navigation.pagination .nav-links .prev.page-numbers,
+#content_sumdu .navigation.pagination .nav-links .next.page-numbers{
+  border: none;
+}
+#content_sumdu .navigation.pagination .nav-links .prev.page-numbers:hover,
+#content_sumdu .navigation.pagination .nav-links .next.page-numbers:hover{
+  background: none;
+  cursor: pointer;
+}
+#content_sumdu .navigation.pagination .nav-links .page-numbers.dots{
+  border: none;
+}
+#content_sumdu .navigation.pagination .nav-links .page-numbers.current{
+  font-size: 17pt;
+  border: 2px solid green;
+  font-weight: bold;
+  padding: 1px 5px;
+  border-radius: 6px;
+  background: rgb(144,238,144);
+}
+#content_sumdu .navigation.pagination .nav-links .page-numbers{
+  font-size: 17pt;
+  border: 2px solid darkseagreen;
+  font-weight: bold;
+  padding: 1px 5px;
+  border-radius: 6px;
+}
+/*pagination*/
+
+/*search*/
+#content_sumdu .search_t, #content_sumdu .search_c{
+  font-size: large;
+}
+#content_sumdu .search_t span, #content_sumdu .search_c span{
+  font-weight: bold;
+  color: chocolate;
+}
+/*search*/
 
 /*comment*/
 .comment_g{
@@ -205,16 +283,30 @@ h1{
   text-decoration: none;
 }
 .comment_g .children{
-  margin: 0 0 0 25px;
+  margin: 0 0 0 50px;
 }
 .comment_g .comment-body{
   margin: 20px 0 0 0;
+}
+.comment_g .comment-awaiting-moderation{
+  color: crimson;
 }
 /*comment*/
 
 /*comment form*/
 .comment_form_text{
   max-width: 875px;
+}
+.s_comment-notes{
+  color: #4caf50;
+}
+#content_sumdu .form-submit .submit{
+  padding: 2px;
+  border: 1px solid #ADC0CE;
+  transition: .5s linear;
+}
+#content_sumdu .form-submit .submit:hover{
+  background: #ADC0CE;
 }
 /*comment form*/
 
