--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ h1{
   position: relative;
   top: -23px;
   color: #337ab7;
-  font-size: 16pt;
+  font-size: 21px;
   font-weight: bold;
 }
 .i_line{
