--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1{
 }
 
 #header .header-menu{
+  margin: 4px 0 0 0;
   float: left;
 }
 #header .header-menu li{
@@ -54,7 +55,7 @@ h1{
   display: block;
 }
 #header .header-menu a{
-  font-size: 15pt;
+  font-size: 13pt;
   font-weight: bold;
   text-decoration: none;
   transition: .5s linear;
@@ -92,7 +93,16 @@ h1{
 #header .lang img{
   border-radius: 5px;
 }
-/*header*/
+
+.login_registration{
+  position: absolute;
+}
+.login_registration .l,
+.login_registration .r{
+  position: relative;
+  left: 950px;
+}
+  /*header*/
 
 /*header footer*/
 #cen{
